Widgets: Tightening layout for topic widget. Increasing size of h2s. Adjusting whitespace around valence issues.

--- a/app/assets/stylesheets/widgets/widgets.css.less
+++ b/app/assets/stylesheets/widgets/widgets.css.less
@@ -292,9 +292,6 @@ figcaption.muted {
     padding-left: 65px;
     padding-bottom: 15px;
   }
-  h3 {
-    margin-top: 1em;
-  }
   p {
     margin-top: 0;
   }
@@ -373,6 +370,7 @@ figcaption.muted {
       margin: 1em 0 0 0;
     }
     h2 {
+      font-size: 1.6em;
       line-height: 1.5em;
       margin: 2em 0 0.5em 0;
       border-bottom: 1px solid #eee;
@@ -450,13 +448,14 @@ figcaption.muted {
       }
       > p {
         float: left;
+        margin-top: 0;
         width: 33%;
         line-height: 1.6em;
       }
       .positions {
         width: 67%;
         float: left;
-        margin-top: 10px;
+        margin-top: 5px;
         .labels h3 img,
         .icons .position-wrapper img {
           max-width: 42px;
